--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-anaconda-anon-usage==0.5.0
 annotated-types==0.6.0
 anyio==4.9.0
 archspec==0.2.3
@@ -16,14 +15,6 @@ charset-normalizer==3.3.2
 chroma-hnswlib==0.7.6
 click==8.1.8
 coloredlogs==15.0.1
-conda==25.3.1
-conda-anaconda-telemetry==0.1.2
-conda-anaconda-tos==0.1.2
-conda-content-trust==0.2.0
-conda-libmamba-solver==25.1.1
-conda-pack==0.8.1
-conda-package-handling==2.4.0
-conda_package_streaming==0.11.0
 cryptography==43.0.3
 Deprecated==1.2.18
 distro==1.9.0
@@ -35,6 +26,7 @@ frozendict==2.4.2
 fsspec==2025.3.2
 google-auth==2.40.1
 googleapis-common-protos==1.70.0
+gymnasium==1.1.1
 grpcio==1.71.0
 h11==0.16.0
 hf-xet==1.1.0
@@ -55,12 +47,10 @@ kubernetes==32.0.1
 langchain-core==0.3.59
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
-libmambapy==2.0.5
 lxml==5.4.0
 markdown-it-py==2.2.0
 MarkupSafe==3.0.2
 mdurl==0.1.0
-menuinst==2.2.0
 mmh3==5.1.0
 mpmath==1.3.0
 networkx==3.4.2
@@ -68,6 +58,7 @@ numpy==2.2.5
 oauthlib==3.2.2
 onnxruntime==1.22.0
 opentelemetry-api==1.33.0
+opencv-python==4.10.0.82
 opentelemetry-exporter-otlp-proto-common==1.33.0
 opentelemetry-exporter-otlp-proto-grpc==1.33.0
 opentelemetry-instrumentation==0.54b0
@@ -127,6 +118,7 @@ tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
+tensorboard==2.17.1
 transformers==4.51.3
 truststore==0.10.0
 typer==0.15.3
